[project]
name = "nuclear-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "rich>=13.0.0",
    "uvicorn>=0.34.3",
    "websockets>=15.0.1",
]
