[project]
name = "nuclear-simulator"
version = "0.1.0"
description = "A comprehensive nuclear power plant simulator with hierarchical system architecture"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
include = ["simulator*", "systems*", "data_gen*", "data*", "tests*"]
exclude = ["sim_env*"]
